// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`betterer ci > should work when a test is already complete 1`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    \\"src/index.ts:1499252024\\": [
      [2, 12, 1, \\"The left-hand side of an arithmetic operation must be of type \\\\'any\\\\', \\\\'number\\\\', \\\\'bigint\\\\' or an enum type.\\", \\"177604\\"]
    ]
  }\`
};
"
`;

exports[`betterer ci > should work when a test is already complete 2`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//"
`;

exports[`betterer ci > should work when a test is already complete 3`] = `
[
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (15ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (117ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (219ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (320ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (421ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (522ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (623ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (724ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (825ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (930ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,031ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,133ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,234ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,336ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,436ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,537ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,639ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,740ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,840ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,941ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,043ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,143ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,248ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,350ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,452ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,553ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,657ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,758ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,860ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,961ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,061ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,163ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,264ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,365ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,466ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,567ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,670ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,771ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,872ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,975ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,083ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,185ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,285ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,386ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,486ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,586ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,689ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,790ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,891ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,991ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,091ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,191ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,291ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,393ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,494ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,595ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,698ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,698ms): 1 test running...
✅ test: \\"test\\" got checked for the first time! (1 issue) 🎉
",
  "🎉 Betterer (5,715ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! (1 issue) 🎉
",
  "🎉 Betterer (5,715ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! (1 issue) 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉
",
  "🌟 Betterer (-1ms):
",
  "🌟 Betterer (1ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (101ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (202ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (303ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (403ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (504ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (607ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (710ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (811ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (913ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,013ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,114ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,215ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,316ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,417ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,518ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,621ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,723ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,824ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (1,925ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,026ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,126ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,228ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,328ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,430ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,530ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,631ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,732ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,835ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (2,938ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,040ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,146ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,247ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,349ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,451ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,552ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,652ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,753ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,854ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (3,956ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,059ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,162ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,263ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,364ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,464ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,566ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,668ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,774ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,878ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (4,979ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,081ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,181ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,283ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,385ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,487ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,588ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,693ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,793ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,896ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (5,998ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (6,100ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (6,201ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (6,302ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (6,404ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (6,504ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (6,605ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (6,706ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (6,809ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (6,910ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,010ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,112ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,214ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,317ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,419ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,520ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,626ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,728ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,830ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (7,931ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (8,033ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (8,133ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (8,237ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (8,341ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (8,341ms): 1 test running...
✅ test: \\"test\\" met its goal! 🎉
",
  "🎉 Betterer (8,370ms): 1 test done!
✅ test: \\"test\\" met its goal! 🎉
",
  "🎉 Betterer (8,370ms): 1 test done!
✅ test: \\"test\\" met its goal! 🎉

1 test got checked. 🤔
1 test got better! 😍
1 test met its goal! 🎉
",
  "🌟 Betterer:
",
  "🌟 Betterer: 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer: 1 test running...
✅ test: \\"test\\" has already met its goal! ✨
",
  "🎉 Betterer: 1 test done!
✅ test: \\"test\\" has already met its goal! ✨
",
  "🎉 Betterer: 1 test done!
✅ test: \\"test\\" has already met its goal! ✨

1 test got checked. 🤔
1 test met its goal! 🎉
",
]
`;

exports[`betterer ci > should work when a test is already complete 4`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//"
`;
